--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -1,13 +1,13 @@
 <div class="poppaDiv">
   <div class="miniContainer">
-    <div class="title">
+<!--     <div class="title">
       <div>
         <h1>It's Cut Time</h1>
       </div>
-    </div>
+    </div> -->
 
     <nav class="superNav">
-      <ul class="unorderedList">
+<!--       <ul class="unorderedList">
         <li class="customerContainer">
           <h4>Welcome {{profile.name}}, where are you located?</h4>
         </li>
@@ -25,12 +25,12 @@
               </span>
             </div>
           </form>
-        </li>
+        </li> -->
         <span [routerLink]="['/landing']">Appointments</span>
         <span [routerLink]="['/customerProfile']">Profile</span>
         <span [routerLink]="['/messages']">Messages</span>
         <span [routerLink]="['/login']">Log out</span>
-      </ul>
+      <!-- </ul> -->
     </nav>
 
   </div>
