--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -1,21 +1,16 @@
 <div class="background"></div>
-<customer-navbar class="nav-bar"
-  [searchLocation]="searchLocation"
-  (locationChange)="onSearchLocationChange($event)"
->
-</customer-navbar>
+<customer-navbar class="nav-bar"></customer-navbar>
 <div class="container">
   <div class="stylistContainer">
     <input
       placeholder="Enter your location"
-      typer="search"
+      type="search"
       [(ngModel)]="location"
       (keypress)="updateCloseToYou(location)"
     />
     <div *ngFor="let stylist of stylistsCloseToYou">
       <close-to-you
         [stylistInformation]="stylist"
-        [searchLocation]="searchLocation"
         [routerLink]="['/stylistProfile', stylist.id]"
       >
       </close-to-you>
