Reduce spacing between nav

--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   background-image: url('http://cdn.wallpapersafari.com/44/5/HQjIBU.jpg');
   height: 100vh;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .header {
@@ -17,6 +18,7 @@
 .loginWrapper {
   display: flex;
   flex-direction: row;
+  margin-top: 2em;
   margin-left: 2em;
   margin-right: 2em;
   height: 35vh;
