--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
@@ -62,7 +62,7 @@
             id="service"
             ngModel
             [name]="service.id"
-          >{{ service.servicename }}
+          >{{ service }}
         </span>
       </div>
       <div class="buttonContainer">
