--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -1,118 +1,14 @@
-.poppaDiv {
-  height: 25%;
-  width: 90%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-left: 3em;
-  margin-top: 3em;
-}
-
-h1 {
-  text-shadow: 3px 3px 1px rgba(173, 216, 230, 0.9);
-  width: 100%;
-  flex: 1 1;
-  align-self: center;
-}
-
-h4 {
-  color: black;
-  width: 100%;
-}
-
-.title {
-  flex: 1 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-}
-
-.container-fluid,
-.miniContainer {
-  width: 100%;
-  height: 20%;
-  flex: 1 1 100%;
-  border-bottom: 2px solid black;
-  margin-bottom: 2em;
-}
-
-.superNav {
-  width: 100%;
-    box-shadow: 5px 5px 3px rgba(173, 216, 230, 0.9);
-}
-
-.unorderedList {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  list-style: none;
-  width: 100%;
-}
-
-.superForm {
+.navContainer {
+  border: 2px solid red;
   display: flex;
 }
 
-input {
-  width: 20em;
-  background-color: #d3d3d3;
+.photoContainer {
+  border: 2px solid yellow;
+  flex: 1 1 50%;
 }
 
-.customerContainer {
-  flex: 1 1 30%;
-}
-
-.search {
-  flex: 1 1 40%;
-}
-
-.dropdownList {
-  flex: 1 1 15%;
-}
-
-.dropdown {
-  position: relative;
-  display: absolute;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #ffffff;
-  min-width: 25ch;
-  width: 100%;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 0ch 3ch 0ch 0ch;
-  z-index: 1;
-  border: 1px solid black;
-}
-
-p {
-  font-weight: bold;
-  font-size: 1.2em;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-  font-weight: bold;
-  background-color: #ffffff;
-}
-
-.dropdownUl * {
-  list-style-type: none;
-  width: 100%;
-  height: 100%;
-  background-color: #ffffff;
-}
-
-.dropdownUl *:hover {
-  list-style-type: none;
-  color: rgba(173, 216, 230, 0.9);
-}
-
-button {
-  color: #e5e3e3;
+.listContainer {
+  border: 2px solid red;
+  flex: 1 1 50%;
 }
