--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -1,14 +1,33 @@
 .navContainer {
-  border: 2px solid red;
   display: flex;
+  background-color: rgba(0,0,0, 50);
+  color: white;
+  background-image: url('http://cdn.wallpapersafari.com/44/5/HQjIBU.jpg');
 }
 
 .photoContainer {
-  border: 2px solid yellow;
   flex: 1 1 50%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 2em;
 }
 
 .listContainer {
-  border: 2px solid red;
   flex: 1 1 50%;
+}
+
+.myList {
+  width: 100%;
+  height: 100%;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 1em;
+}
+
+.myList > * {
+  flex: 1 1;
+  margin: 1em;
 }
