Adjust stylist form component

--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -3,6 +3,7 @@
   background-color: rgba(0,0,0, 50);
   color: white;
   background-image: url('http://cdn.wallpapersafari.com/44/5/HQjIBU.jpg');
+  padding: 1em;
 }
 
 .photoContainer {
