--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -4,23 +4,32 @@
   (locationChange)="onSearchLocationChange($event)"
 >
 </customer-navbar>
-<div class="container">
-  <div class="stylistContainer">
-    <div *ngFor="let stylist of stylistsCloseToYou">
-      <close-to-you
-        [stylistInformation]="stylist"
-        [searchLocation]="searchLocation"
-        [routerLink]="['/stylistProfile', stylist.id]"
-      >
-      </close-to-you>
-    </div>
-  </div>
 
-  <div>
-    <customer-map
-      class="map"
-      [searchLocation]="searchLocation"
-    >
-    </customer-map>
-  </div>
+<div *ngFor="let stylist of stylistsCloseToYou">
+  <close-to-you
+    [stylistInformation]="stylist"
+    [searchLocation]="searchLocation"
+    [routerLink]="['/stylistProfile', stylist.id]"
+  >
+  </close-to-you>
 </div>
+
+<customer-map
+  class="map"
+  [searchLocation]="searchLocation"
+>
+</customer-map>
+
+
+
+
+<!-- <div>
+  <input
+    placeholder="Enter your location"
+    typer="search"
+    #streetAddress
+    (ngModelChange)="locationChange.emit(streetAddress)"
+  >
+  <button(click)="handleSearchLocationChange(streetAddress.value)">Search</button>
+</div>
+ -->
