--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -1,35 +1,37 @@
-<customer-navbar
-  [customerId]="customerProfile.id"
-  [searchLocation]="searchLocation"
-  (locationChange)="onSearchLocationChange($event)"
->
-</customer-navbar>
-
-<div *ngFor="let stylist of stylistsCloseToYou">
-  <close-to-you
-    [stylistInformation]="stylist"
+<div class="componentWrapper">
+  <customer-navbar
+    [customerId]="customerProfile.id"
     [searchLocation]="searchLocation"
-    [routerLink]="['/stylistProfile', stylist.id]"
+    (locationChange)="onSearchLocationChange($event)"
   >
-  </close-to-you>
+  </customer-navbar>
+  <div class="stylistContainer">
+    <input
+      placeholder="Enter your location"
+      typer="search"
+      #streetAddress
+      (ngModelChange)="locationChange.emit(streetAddress)"
+    >
+    <button (click)="handleSearchLocationChange(streetAddress.value)">Search</button>
+  </div>
+
+  <div class="mapContainer">
+    <customer-map
+      class="map"
+      [searchLocation]="searchLocation"
+    >
+    </customer-map>
+  </div>
 </div>
 
-<customer-map
-  class="map"
-  [searchLocation]="searchLocation"
->
-</customer-map>
 
 
 
-
-<!-- <div>
-  <input
-    placeholder="Enter your location"
-    typer="search"
-    #streetAddress
-    (ngModelChange)="locationChange.emit(streetAddress)"
-  >
-  <button(click)="handleSearchLocationChange(streetAddress.value)">Search</button>
-</div>
- -->
+<!-- <div *ngFor="let stylist of stylistsCloseToYou">
+    <close-to-you
+      [stylistInformation]="stylist"
+      [searchLocation]="searchLocation"
+      [routerLink]="['/stylistProfile', stylist.id]"
+    >
+    </close-to-you>
+  </div> -->
