--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -4,6 +4,7 @@
   color: white;
   background-image: url('http://cdn.wallpapersafari.com/44/5/HQjIBU.jpg');
   padding: 1em;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .photoContainer {
