--- a/thesis-app/src/app/customer/components/landing/landing.component.html
+++ b/thesis-app/src/app/customer/components/landing/landing.component.html
@@ -58,7 +58,7 @@
           [location]="pendingBooking.location"
         >
         </booking>
-        <button (click)="declineBooking(pendingBooking.id, i)">Decline</button>
+        <!-- <button (click)="declineBooking(pendingBooking.id, i)">Decline</button> -->
       </div>
     </div>
   </div>
@@ -116,8 +116,8 @@
         [location]="pendingBooking.location"
       >
       </booking>
-      <button (click)="acceptBooking(pendingBooking.id, i)">Accept</button>
-      <button (click)="declineBooking(pendingBooking.id, i)">Decline</button>
+<!--       <button (click)="acceptBooking(pendingBooking.id, i)">Accept</button>
+      <button (click)="declineBooking(pendingBooking.id, i)">Decline</button> -->
     </div>
   </div>
 
