--- a/thesis-app/src/app/customer/components/booking/booking.component.css
+++ b/thesis-app/src/app/customer/components/booking/booking.component.css
@@ -1,7 +1,9 @@
 .wrapper {
   display: flex;
   font-family: 'Montserrat', sans-serif;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid;
 }
 
 .profileContainer {
