--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -5,33 +5,40 @@
     (locationChange)="onSearchLocationChange($event)"
   >
   </customer-navbar>
-  <div class="stylistContainer">
-    <input
-      placeholder="Enter your location"
-      typer="search"
-      #streetAddress
-      (ngModelChange)="locationChange.emit(streetAddress)"
-    >
-    <button (click)="handleSearchLocationChange(streetAddress.value)">Search</button>
-  </div>
+  <div class="mainContainer">
+    <div class="stylistContainer">
+      <div>
+        <h2>Find A Stylist</h2>
+      </div>
+      <div class="inputContainer">
+        <input
+          placeholder="Enter your location"
+          typer="search"
+          #streetAddress
+          (ngModelChange)="locationChange.emit(streetAddress)"
+        >
+        <button (click)="handleSearchLocationChange(streetAddress.value)">Search</button>
+      </div>
+      <div class="closestContainer" *ngFor="let stylist of stylistsCloseToYou">
+        <close-to-you
+          [stylistInformation]="stylist"
+          [searchLocation]="searchLocation"
+          [routerLink]="['/stylistProfile', stylist.id]"
+        >
+        </close-to-you>
+      </div>
+    </div>
 
-  <div class="mapContainer">
-    <customer-map
-      class="map"
-      [searchLocation]="searchLocation"
-    >
-    </customer-map>
+    <div class="mapContainer">
+      <customer-map
+        class="map"
+        [searchLocation]="searchLocation"
+      >
+      </customer-map>
+    </div>
   </div>
 </div>
 
 
 
 
-<!-- <div *ngFor="let stylist of stylistsCloseToYou">
-    <close-to-you
-      [stylistInformation]="stylist"
-      [searchLocation]="searchLocation"
-      [routerLink]="['/stylistProfile', stylist.id]"
-    >
-    </close-to-you>
-  </div> -->
