--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -18,14 +18,14 @@
       <div class="servicesContainer">
         <h4>Services I provide</h4>
         <div class="listStyles">
-          <div class="styleItems" *ngFor="let style of ['hard', 'coded', 'styles']">
-            <h5>{{style}}</h5>
+          <div class="styleItems" *ngFor="let style of styles">
+            <h5>{{style.servicename}}</h5>
           </div>
         </div>
         <div class="aboutMe">
           <h4>About Me</h4>
           <div class="paragraph">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            {{stylistProfile.aboutMe}}
           </div>
         </div>
 
@@ -35,8 +35,9 @@
         </div>
       </div>
       <div class="buttonContainer">
-        <button (click)="toggleMessageModal()">Message me</button>
-        <button (click)="toggleBookingModal()">Book with me</button>
+        <button *ngIf="stateService.retrieveCustomer().type===1" (click)="toggleMessageModal()">Message me</button>
+        <button *ngIf="stateService.retrieveCustomer().type===1" (click)="toggleBookingModal()">Book with me</button>
+        <button *ngIf="stateService.retrieveCustomer().type===0" (click)="editProfile()">Edit</button>
       </div>
     </div>
   </div>
