--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
@@ -45,7 +45,7 @@
         type="url"
         id="url"
         ngModel
-        name="url">
+        name="site_url">
     <br>
     <label for="form-group">Please select a list of services you offer</label>
       <span class="spanContainer">
