--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -32,6 +32,7 @@
   flex: 1 1 30%;
   display: flex;
   flex-direction: column;
+  border-right: 1px solid black;
 }
 
 .imageContainer {
@@ -40,15 +41,17 @@
   align-items: center;
   color: #F9B71A;
   border-bottom: 1px solid black;
-  border-right: 1px solid black;
   flex: 1 1 50%;
   height: 50%;
+  width: 95%;
   margin-bottom: 1em;
+  margin-left: 1em;
 }
 
 .userInfo {
   flex: 1 1 50%;
   height: 50%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -70,6 +73,16 @@
   color: #F9B71A;
   border: 1px solid #F9B71A;
   background-color: #ffffff;
+}
+
+.servicesContainer {
+  border: 2px solid red;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.servicesContainer > * {
+  flex: 1 1 25%;
 }
 
 
