Stylist profile button should route to the messages component

--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -4,7 +4,7 @@
   <div class="subHeader">
     <h3>My Profile</h3>
     <div class="buttonContainer">
-      <button (click)="toggleModal()">Message</button>
+      <button [routerLink]="['/messages']">Message</button>
     </div>
   </div>
 
